tests/baselines/reference/undefinedTypeAssignment1.errors.txt
undefinedTypeAssignment1.ts(1,6): error TS2457: Type alias name cannot be 'undefined'.


==== undefinedTypeAssignment1.ts (1 errors) ====
    type undefined = string;
         ~~~~~~~~~
!!! error TS2457: Type alias name cannot be 'undefined'.
    function p(undefined = "wat") {
    	return undefined;
    }
    